<resources>
    <string name="app_name">TPDoor</string>
    <string name="Abrir">Open</string>
    <string name="Cerrar">Close</string>
    <string name="Parar">Stop</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Forget">¿Forgot your Passoword?</string>
    <string name="Enviar_Email_Password">Reset Password</string>
    <string name="Volver">Return to Login</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TPDoor App</string>
    <string name="nav_header_subtitle">Tecni Puertas HC</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Lugares</string>
    <string name="menu_gallery">Usuarios</string>
    <string name="menu_permisos">Permisos</string>
    <string name="menu_slideshow">Agregar</string>

    <string name="home_second">Home Second</string>

    <string name="Agregar">Agregar</string>
    <string name="Serial">Serial</string>
    <string name="Lugar">Lugar</string>
    <string name="Guardar">Guardar</string>
    <string name="Nombre">Nombre</string>
    <string name="todo">TODO</string>
</resources>
