<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgDevice"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_place_black_24dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/labLugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/Lugar"
        app:layout_constraintStart_toEndOf="@+id/imgDevice"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labSerial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/Serial"
        app:layout_constraintStart_toEndOf="@+id/imgDevice"
        app:layout_constraintTop_toBottomOf="@+id/labLugar" />

    <TextView
        android:id="@+id/txtLugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/labLugar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSerial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/labSerial"
        app:layout_constraintTop_toBottomOf="@+id/txtLugar" />
</androidx.constraintlayout.widget.ConstraintLayout>